--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "autoload": {
         "psr-0": {
-            "DI\\Symfony2": "src/"
+            "DI\\Bridge\\Symfony": "src/"
         }
     },
     "require": {
