--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     },
     "require": {
-        "mnapoli/php-di": "~4.0@dev",
+        "mnapoli/php-di": "~4.0",
         "symfony/dependency-injection": "~2.0"
     }
 }
