--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
     "license": "MIT",
     "autoload": {
         "psr-0": {
-            "DI\\Bridge\\Symfony": "src/",
+            "DI\\Bridge\\Symfony": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-0": {
             "UnitTest\\DI\\Bridge\\Symfony": "tests/",
             "FunctionalTest\\DI\\Bridge\\Symfony": "tests/"
         }
@@ -14,5 +18,8 @@
     "require": {
         "php-di/php-di": "~4.0 || ^5.0",
         "symfony/dependency-injection": "~2.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0"
     }
 }
