--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 # .gitattributes
 tests/ export-ignore
 .travis.yml export-ignore
+demo/ export-ignore
 
 # Auto detect text files and perform LF normalization
 * text=auto
