--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/dependency-injection": "~2.0"
     },
     "require-dev": {
+        "symfony/config": "~2.0",
         "phpunit/phpunit": "~4.0"
     }
 }
