--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "mnapoli/php-di-symfony2",
+    "name": "php-di/symfony2-bridge",
     "type": "library",
     "description": "Integrates PHP-DI to Symfony 2",
-    "homepage": "https://github.com/mnapoli/PHP-DI-Symfony2/",
+    "homepage": "https://github.com/PHP-DI/Symfony2-Bridge/",
     "license": "MIT",
     "autoload": {
         "psr-0": {
