--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     },
     "require": {
         "mnapoli/php-di": "~4.0",
-        "symfony/dependency-injection": "~2.3",
-        "symfony/http-kernel": "~2.3",
-        "symfony/proxy-manager-bridge": "~2.3",
-        "symfony/config": "~2.3"
+        "symfony/dependency-injection": "~2.3|~3.O",
+        "symfony/http-kernel": "~2.3|~3.O",
+        "symfony/proxy-manager-bridge": "~2.3|~3.O",
+        "symfony/config": "~2.3|~3.O"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
-        "symfony/filesystem": "~2.1"
+        "symfony/filesystem": "~2.1|~3.O"
     }
 }
