--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     },
     "require": {
-        "mnapoli/php-di": "~4.0|~5.0",
+        "php-di/php-di": "~4.0|~5.0",
         "symfony/dependency-injection": "~2.3|~3.O",
         "symfony/http-kernel": "~2.3|~3.O",
         "symfony/proxy-manager-bridge": "~2.3|~3.O",
