--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     },
     "require": {
-        "php-di/php-di": "~4.0 || ^5.0",
+        "php-di/php-di": "^5.0",
         "symfony/dependency-injection": "~2.0"
     },
     "require-dev": {
