--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,11 @@ php:
   - 5.6
   - hhvm
 
+matrix:
+  include:
+    - php: 5.4
+      env: dependencies=lowest
+
 before_script:
-  - composer install
+  - composer install -n
+  - if [ "$dependencies" = "lowest" ]; then composer update --prefer-lowest --prefer-stable -n; fi;
