Support SF 3.3 to SF 4.0

--- a/tests/FunctionalTest/Fixtures/config/class1.yml
+++ b/tests/FunctionalTest/Fixtures/config/class1.yml
@@ -1,4 +1,5 @@
 services:
     class1:
         class: DI\Bridge\Symfony\Test\FunctionalTest\Fixtures\Class1
+        public: true
         arguments: [ '@DI\\Bridge\\Symfony\\Test\\FunctionalTest\\Fixtures\\Class2' ]
