--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
     "require": {
         "php": "~7.0",
         "php-di/php-di": "~6.0",
-        "symfony/dependency-injection": "~3.3",
-        "symfony/http-kernel": "~3.3",
-        "symfony/proxy-manager-bridge": "~3.3",
-        "symfony/config": "~3.3"
+        "symfony/dependency-injection": "~3.3||~4.0",
+        "symfony/http-kernel": "~3.3||~4.0",
+        "symfony/proxy-manager-bridge": "~3.3||~4.0",
+        "symfony/config": "~3.3||~4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
