--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
 language: php
 
 php:
-  - 5.5
-  - 5.6
   - 7.0
   - 7.1
-  - hhvm
+  - 7.2
 
 matrix:
   include:
-    - php: 5.5
+    - php: 7.0
       env: dependencies=lowest
 
 before_script:
   - composer install -n
   - if [ "$dependencies" = "lowest" ]; then composer update --prefer-lowest --prefer-stable -n; fi;
+
+script:
+  - vendor/bin/phpunit
