--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,16 @@
     "require": {
         "php": "~7.0",
         "php-di/php-di": "~6.0",
-        "symfony/dependency-injection": "~3.3||~4.0",
-        "symfony/http-kernel": "~3.3||~4.0",
-        "symfony/proxy-manager-bridge": "~3.3||~4.0",
-        "symfony/config": "~3.3||~4.0"
+        "symfony/dependency-injection": "~3.3||~4.0||~5.0",
+        "symfony/http-kernel": "~3.3||~4.0||~5.0",
+        "symfony/proxy-manager-bridge": "~3.3||~4.0||~5.0",
+        "symfony/config": "~3.3||~4.0||~5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
         "symfony/filesystem": "^3.0",
         "symfony/yaml": "^3.0",
-        "symfony/debug": "^3.0"
+        "symfony/debug": "^3.0",
+        "symfony/error-handler": "~4.0||~5.0"
     }
 }
