Fix fixture with synthetic service

--- a/tests/FunctionalTest/Fixtures/config/class1.yml
+++ b/tests/FunctionalTest/Fixtures/config/class1.yml
@@ -1,5 +1,9 @@
 services:
+    DI\Bridge\Symfony\Test\FunctionalTest\Fixtures\Class2:
+        class: DI\Bridge\Symfony\Test\FunctionalTest\Fixtures\Class2
+        synthetic: true
+
     class1:
         class: DI\Bridge\Symfony\Test\FunctionalTest\Fixtures\Class1
         public: true
-        arguments: [ '@DI\\Bridge\\Symfony\\Test\\FunctionalTest\\Fixtures\\Class2' ]
+        arguments: [ '@DI\Bridge\Symfony\Test\FunctionalTest\Fixtures\Class2' ]
