--- a/composer.json
+++ b/composer.json
@@ -15,18 +15,17 @@
         }
     },
     "require": {
-        "php": "~7.0",
+        "php": "~7.2",
         "php-di/php-di": "~6.0",
-        "symfony/dependency-injection": "~3.3||~4.0||~5.0",
-        "symfony/http-kernel": "~3.3||~4.0||~5.0",
-        "symfony/proxy-manager-bridge": "~3.3||~4.0||~5.0",
-        "symfony/config": "~3.3||~4.0||~5.0"
+        "symfony/dependency-injection": "~3.4||~4.4||~5.1",
+        "symfony/http-kernel": "~3.4||~4.4||~5.1",
+        "symfony/proxy-manager-bridge": "~3.4||~4.4||~5.1",
+        "symfony/config": "~3.4||~4.4||~5.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
-        "symfony/filesystem": "^3.0",
-        "symfony/yaml": "^3.0",
-        "symfony/debug": "^3.0",
-        "symfony/error-handler": "~4.0||~5.0"
+        "phpunit/phpunit": "~9.2",
+        "symfony/filesystem": "~3.4||~4.4||~5.1",
+        "symfony/yaml": "~3.4||~4.4||~5.1",
+        "symfony/error-handler": "~3.4||~4.4||~5.1"
     }
 }
