--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "symfony/config": "~3.4||~4.4||~5.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~9.0",
+        "phpunit/phpunit": "~8.0||~9.0",
         "symfony/filesystem": "~3.4||~4.4||~5.1",
         "symfony/yaml": "~3.4||~4.4||~5.1",
         "symfony/error-handler": "~3.4||~4.4||~5.1"
